--- a/memoire/main_test.html
+++ b/memoire/main_test.html
@@ -6223,5 +6223,410 @@ viabilité d’une idée, d’un concept ou d’une méthode.<a href="#fnref77"
 class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section>
+<section>
+
+  <div id="refs" class="references csl-bib-body hanging-indent"
+role="doc-bibliography">
+<div id="ref-AlgorithmicComposition2023" class="csl-entry"
+role="doc-biblioentry">
+<span>“Algorithmic Composition.”</span> 2023. <em>Wikipedia</em>,
+August.
+</div>
+<div id="ref-andreattaInformatiqueMusicaleInformatique2019"
+class="csl-entry" role="doc-biblioentry">
+Andreatta, Moreno, Gérard Assayag, Myriam Desainte-Catherine, Jean-Louis
+Giavitto, Mathieu Giraud, Yann Orlarey, and Anne Sèdes. 2019.
+<span>“L’informatique Musicale : Informatique Et Musique En
+Interdisciplinarit<span>é</span>.”</span> In <em>Journ<span>é</span>es
+d’<span>Informatique Musicale</span> (<span>JIM</span> 2019)</em>.
+Bayonne, France.
+</div>
+<div id="ref-bisqwitHowCreateMusic2010" class="csl-entry"
+role="doc-biblioentry">
+Bisqwit. 2010. <span>“How to Create Music in <span>C</span>++ from
+Scratch (<span>MIDI</span> File Format) / <span>C</span>++11 Variadic
+Templates Example.”</span>
+</div>
+<div id="ref-blackwellLiveCodingUser2022" class="csl-entry"
+role="doc-biblioentry">
+Blackwell, Alan, Emma Cocker, Geoff Cox, Alex McLean, and Thor
+Magnusson. 2022. <em>Live Coding: A User’s Manual</em>. Software
+Studies. Cambridge, Massachusetts London: The MIT Press.
+</div>
+<div id="ref-blackwellProgrammingLanguageMusical2005" class="csl-entry"
+role="doc-biblioentry">
+Blackwell, Alan, and Nick Collins. 2005. <span>“The <span>Programming
+Language</span> as a <span>Musical Instrument</span>.”</span>
+</div>
+<div id="ref-bouvierShadersDynamiquesPour" class="csl-entry"
+role="doc-biblioentry">
+Bouvier, Fabienne. n.d. <span>“<span>Les shaders dynamiques pour
+l’expressivit<span>é</span> artistique</span>.”</span>
+</div>
+<div id="ref-brownAacellPracticeApproach2007" class="csl-entry"
+role="doc-biblioentry">
+Brown, Andrew R., and Andrew C. Sorensen. 2007. <span>“Aa-Cell in
+Practice : An Approach to Musical Live Coding.”</span> In
+<em>International <span>Computer Music Conference</span></em>, 292–99.
+</div>
+<div id="ref-carlssonForgottenPioneersCreative2019" class="csl-entry"
+role="doc-biblioentry">
+Carlsson, Anders. 2019. <span>“The <span>Forgotten Pioneers</span> of
+<span>Creative Hacking</span> and <span>Social Networking</span>–
+<span>Introducing</span> the <span>Demoscene</span>,”</span> June.
+</div>
+<div id="ref-clintonMusicImprovisationPython" class="csl-entry"
+role="doc-biblioentry">
+Clinton, William. n.d. <span>“Music Improvisation in <span>Python</span>
+Using a <span>Markov Chain Algorithm</span>.”</span>
+</div>
+<div id="ref-collinsPacManPopMusic2008" class="csl-entry"
+role="doc-biblioentry">
+Collins, Karen, ed. 2008. <em>From <span>Pac-Man</span> to Pop Music:
+Interactive Audio in Games and New Media</em>. Ashgate Popular and Folk
+Music Series. Aldershot, Hampshidre, England ; Burlington, VT: Ashgate.
+</div>
+<div id="ref-collinsAnalysisGenerativeMusic2008" class="csl-entry"
+role="doc-biblioentry">
+Collins, Nick. 2008. <span>“The <span>Analysis</span> of
+<span>Generative Music Programs</span>.”</span> <em>Organised Sound</em>
+13 (3): 237–48. <a
+href="https://doi.org/10.1017/S1355771808000332">https://doi.org/10.1017/S1355771808000332</a>.
+</div>
+<div id="ref-collinsLiveCodingLaptop2003" class="csl-entry"
+role="doc-biblioentry">
+Collins, Nick, Alex McLEAN, Julian Rohrhuber, and Adrian Ward. 2003.
+<span>“<span>Live coding in laptop performance</span>.”</span>
+<em>Organised Sound</em> 8 (3): 321–30. <a
+href="https://doi.org/10.1017/S135577180300030X">https://doi.org/10.1017/S135577180300030X</a>.
+</div>
+<div id="ref-collopyVisualMusicVisual1999" class="csl-entry"
+role="doc-biblioentry">
+Collopy, F., R. M. Fuhrer, and D. Jameson. 1999. <span>“Visual Music in
+a Visual Programming Language.”</span> In <em>Proceedings 1999
+<span>IEEE Symposium</span> on <span>Visual Languages</span></em>,
+111–18. <a
+href="https://doi.org/10.1109/VL.1999.795882">https://doi.org/10.1109/VL.1999.795882</a>.
+</div>
+<div id="ref-colubriGLSLShaders2023" class="csl-entry"
+role="doc-biblioentry">
+Colubri, Andrés. 2023. <span>“<span>GLSL Shaders</span>.”</span> In
+<em>Processing for <span>Android</span>: <span>Create Mobile</span>,
+<span class="nocase">Sensor-aware</span>, and <span>XR Applications
+Using Processing</span></em>, edited by Andrés Colubri, 269–301.
+Berkeley, CA: Apress. <a
+href="https://doi.org/10.1007/978-1-4842-9585-4_15">https://doi.org/10.1007/978-1-4842-9585-4_15</a>.
+</div>
+<div id="ref-comninosMathematicalComputerProgramming2006"
+class="csl-entry" role="doc-biblioentry">
+Comninos, Peter. 2006. <em>Mathematical and <span>Computer Programming
+Techniques</span> for <span>Computer Graphics</span></em>. London:
+Springer London. <a
+href="https://doi.org/10.1007/978-1-84628-292-8">https://doi.org/10.1007/978-1-84628-292-8</a>.
+</div>
+<div id="ref-copeAlgorithmicMusicComposition2015" class="csl-entry"
+role="doc-biblioentry">
+Cope, David. 2015. <span>“Algorithmic <span>Music
+Composition</span>.”</span> In <em>Patterns of
+<span>Intuition</span></em>, edited by Gerhard Nierhaus, 405–16.
+Dordrecht: Springer Netherlands. <a
+href="https://doi.org/10.1007/978-94-017-9561-6_19">https://doi.org/10.1007/978-94-017-9561-6_19</a>.
+</div>
+<div id="ref-cruzPsenoughTeach_yourself_demoscene_in_14_days2024"
+class="csl-entry" role="doc-biblioentry">
+Cruz, Filipe. 2024.
+<span>“Psenough/Teach_yourself_demoscene_in_14_days.”</span>
+</div>
+<div id="ref-cunninghamComputerGraphicsProgramming" class="csl-entry"
+role="doc-biblioentry">
+Cunningham, Dr Steve. n.d. <span>“Computer <span>Graphics</span>:
+<span>Programming</span>, <span>Problem Solving</span>, and <span>Visual
+Communication</span>.”</span>
+</div>
+<div id="ref-deanOxfordHandbookAlgorithmic2018" class="csl-entry"
+role="doc-biblioentry">
+Dean, R. T., and Alex McLean, eds. 2018. <em>The <span>Oxford</span>
+Handbook of Algorithmic Music</em>. Oxford Handbooks. New York, NY:
+Oxford University Press.
+</div>
+<div id="ref-Demoscene2023" class="csl-entry" role="doc-biblioentry">
+<span>“Demoscene.”</span> 2023. <em>Wikipedia</em>, September.
+</div>
+<div id="ref-dewittVisualMusicSearching1987" class="csl-entry"
+role="doc-biblioentry">
+DeWitt, Tom. 1987. <span>“Visual <span>Music</span>:
+<span>Searching</span> for an <span>Aesthetic</span>.”</span>
+<em>Leonardo</em> 20 (2): 115–22.
+</div>
+<div id="ref-earthstinkSquarepusherInterviewCreators2019"
+class="csl-entry" role="doc-biblioentry">
+earthstink. 2019. <span>“Squarepusher <span>Interview</span>. <span>The
+Creators Project</span> - <span>Rencontre</span> Avec
+<span>Squarepusher</span>.”</span>
+</div>
+<div id="ref-formentLivecodingOuMusique2021" class="csl-entry"
+role="doc-biblioentry">
+Forment, Raphael Maurice. 2021. <span>“Live-Coding Et/Ou Musique En
+<span>‘ Plain-Texte ’</span>.”</span> In <em>Journ<span>é</span>es
+d’<span>Informatique Musicale</span> 2021</em>, 11.
+Visioconf<span>é</span>rences, France: AFIM.
+</div>
+<div id="ref-gavotyReProgrammerBoites" class="csl-entry"
+role="doc-biblioentry">
+Gavoty, Élie. n.d. <span>“<span>(Re)programmer des bo<span>î</span>tes
+noires</span>,”</span> 129.
+</div>
+<div id="ref-GenerativeMusic2023" class="csl-entry"
+role="doc-biblioentry">
+<span>“Generative Music.”</span> 2023. <em>Wikipedia</em>, August.
+</div>
+<div id="ref-greenDemo" class="csl-entry" role="doc-biblioentry">
+Green, Dave. n.d. <span>“Demo or <span>Die</span>!”</span>
+<em>Wired</em>. Accessed November 17, 2023.
+</div>
+<div id="ref-hadji-kyriacouRaymarchingDistanceFields2021"
+class="csl-entry" role="doc-biblioentry">
+Hadji-Kyriacou, Avelina, and Ognjen Arandjelović. 2021.
+<span>“Raymarching <span>Distance Fields</span> with
+<span>CUDA</span>.”</span> <em>Electronics</em> 10 (22): 2730. <a
+href="https://doi.org/10.3390/electronics10222730">https://doi.org/10.3390/electronics10222730</a>.
+</div>
+<div id="ref-hansenCraftingCodeDemoscene2014" class="csl-entry"
+role="doc-biblioentry">
+Hansen, Nicolai Brodersen, Rikke Toft Nørgård, and Kim Halskov. 2014.
+<span>“Crafting Code at the Demo-Scene.”</span> In <em>Proceedings of
+the 2014 Conference on <span>Designing</span> Interactive Systems</em>,
+35–38. <span>DIS</span> ’14. New York, NY, USA: Association for
+Computing Machinery. <a
+href="https://doi.org/10.1145/2598510.2598526">https://doi.org/10.1145/2598510.2598526</a>.
+</div>
+<div id="ref-hartleyMultipleViewGeometry" class="csl-entry"
+role="doc-biblioentry">
+Hartley, Richard, and Andrew Zisserman. n.d. <span>“Multiple <span>View
+Geometry</span> in <span>Computer Vision</span>, <span>Second
+Edition</span>.”</span>
+</div>
+<div id="ref-hegronSyntheseImageAlgorithmes1985" class="csl-entry"
+role="doc-biblioentry">
+Hégron, Gérard. 1985. <em><span>Synth<span>è</span>se d’image:
+algorithmes <span>é</span>l<span>é</span>mentaires</span></em>.
+<span>Afcet informatique</span>. [Paris: Afcet : Dunod].
+</div>
+<div id="ref-heikkilaFutureDemoArt" class="csl-entry"
+role="doc-biblioentry">
+Heikkila, Ville-Matias. n.d. <span>“The <span>Future</span> of
+<span>Demo Art</span>: <span>The Demoscene</span> in the 2010s.”</span>
+</div>
+<div id="ref-herremansFunctionalTaxonomyMusic2017" class="csl-entry"
+role="doc-biblioentry">
+Herremans, Dorien, Ching-Hua Chuan, and Elaine Chew. 2017. <span>“A
+<span>Functional Taxonomy</span> of <span>Music Generation
+Systems</span>.”</span> <em>ACM Computing Surveys</em> 50 (5): 69:1–30.
+<a
+href="https://doi.org/10.1145/3108242">https://doi.org/10.1145/3108242</a>.
+</div>
+<div id="ref-holmesElectronicExperimentalMusic2009" class="csl-entry"
+role="doc-biblioentry">
+Holmes, Thom. 2009. <em>Electronic and Experimental Music: Technology,
+Music, and Culture</em>. 3rd ed., transf. to digit. pr. New York:
+Routledge.
+</div>
+<div id="ref-jarvelainenAlgorithmicMusicalComposition" class="csl-entry"
+role="doc-biblioentry">
+Järveläinen, Hanna. n.d. <span>“Algorithmic <span>Musical
+Composition</span>.”</span>
+</div>
+<div id="ref-kirkbrideFoxDotWorksheet2023" class="csl-entry"
+role="doc-biblioentry">
+Kirkbride, Ryan. 2023. <span>“<span>FoxDot Worksheet</span>.”</span>
+</div>
+<div id="ref-kirkbrideLiveCodingPython" class="csl-entry"
+role="doc-biblioentry">
+———. n.d.a. <span>“Live <span>Coding</span> with <span>Python</span> and
+<span>SuperCollider</span>.”</span>
+</div>
+<div id="ref-kirkbrideTROOPCOLLABORATIVETOOL" class="csl-entry"
+role="doc-biblioentry">
+———. n.d.b. <span>“<span>TROOP</span>: <span>A COLLABORATIVE TOOL FOR
+LIVE CODING</span>.”</span>
+</div>
+<div id="ref-lengyelMathematics3DGame2012" class="csl-entry"
+role="doc-biblioentry">
+Lengyel, Eric. 2012. <em>Mathematics for <span>3D</span> Game
+Programming and Computer Graphics</em>. 3rd ed. Boston, MA: Course
+Technology, Cengage Learning.
+</div>
+<div id="ref-lilandLimitsUsageDemoscene" class="csl-entry"
+role="doc-biblioentry">
+Liland, Eivind, and David Geier. n.d. <span>“Beyond the
+<span>Limits</span>: <span>The Usage</span> of <span>C</span>++ in the
+<span>Demoscene</span>.”</span>
+</div>
+<div id="ref-loewProceedingsCERC2012" class="csl-entry"
+role="doc-biblioentry">
+Loew, Robert. n.d. <span>“Proceedings of <span>CERC</span> 2012.”</span>
+</div>
+<div id="ref-marschnerFundamentalsComputerGraphics" class="csl-entry"
+role="doc-biblioentry">
+Marschner, Steve. n.d. <span>“Fundamentals of <span>Computer
+Graphics</span>, <span>Fourth Edition</span>.”</span>
+</div>
+<div id="ref-mccartneyRethinkingComputerMusic2002" class="csl-entry"
+role="doc-biblioentry">
+McCartney, James. 2002. <span>“Rethinking the <span>Computer Music
+Language</span>: <span>SuperCollider</span>.”</span> <em>Computer Music
+Journal - COMPUT MUSIC J</em> 26 (December): 61–68. <a
+href="https://doi.org/10.1162/014892602320991383">https://doi.org/10.1162/014892602320991383</a>.
+</div>
+<div id="ref-molemanMolemanDemosceneArt2012" class="csl-entry"
+role="doc-biblioentry">
+Moleman. 2012. <span>“Moleman 2 - <span>Demoscene</span> - <span>The
+Art</span> of the <span>Algorithms</span> (2012).”</span>
+</div>
+<div id="ref-montenontEtudeShaderComment" class="csl-entry"
+role="doc-biblioentry">
+Montenont, Adrien. n.d. <span>“<span>Etude du shader : Comment
+cr<span>é</span>er un shader r<span>é</span>aliste et
+stylis<span>é</span></span>.”</span>
+</div>
+<div id="ref-morganViolaChamberOrgan" class="csl-entry"
+role="doc-biblioentry">
+Morgan, Nigel. n.d. <span>“For Viola and Chamber Organ.”</span>
+</div>
+<div id="ref-murrayRendu3DIntroduction" class="csl-entry"
+role="doc-biblioentry">
+Murray, David. n.d. <span>“<span>Rendu 3D - Introduction au pipeline
+graphique</span>.”</span>
+</div>
+<div id="ref-nilsonLiveCodingPractice2007" class="csl-entry"
+role="doc-biblioentry">
+Nilson, Click. 2007. <span>“Live Coding Practice.”</span> In
+<em>Proceedings of the 7th International Conference on <span>New</span>
+Interfaces for Musical Expression</em>, 112–17. <span>NIME</span> ’07.
+New York, NY, USA: Association for Computing Machinery. <a
+href="https://doi.org/10.1145/1279740.1279760">https://doi.org/10.1145/1279740.1279760</a>.
+</div>
+<div id="ref-nortonLearningDevelopingGames2013" class="csl-entry"
+role="doc-biblioentry">
+Norton, Terry. 2013. <em>Learning <span>C</span># by Developing Games
+with <span>Unity 3D</span> Beginner’s Guide: Learn the Fundamentals of
+<span>C</span># to Create Scripts for Your
+<span>GameObjects</span></em>. Learn by Doing: Less Theory, More
+Results. Birmingham, UK: Packt Publ.
+</div>
+<div id="ref-pachetCyberneticJamFantasy2004" class="csl-entry"
+role="doc-biblioentry">
+Pachet, F. 2004. <span>“Beyond the Cybernetic Jam Fantasy: The
+Continuator.”</span> <em>IEEE Computer Graphics and Applications</em> 24
+(1): 31–35. <a
+href="https://doi.org/10.1109/MCG.2004.1255806">https://doi.org/10.1109/MCG.2004.1255806</a>.
+</div>
+<div id="ref-papadopoulosAIMethodsAlgorithmic" class="csl-entry"
+role="doc-biblioentry">
+Papadopoulos, George, and Geraint Wiggins. n.d. <span>“<span>AI
+Methods</span> for <span>Algorithmic Composition</span>: <span>A
+Survey</span>, a <span>Critical View</span> and <span>Future
+Prospects</span>.”</span>
+</div>
+<div id="ref-patelHexagonalGrids2013" class="csl-entry"
+role="doc-biblioentry">
+Patel, Amit J. 2013. <span>“Hexagonal <span>Grids</span>.”</span> Red
+Blob Games.
+</div>
+<div id="ref-pharrPhysicallyBasedRendering" class="csl-entry"
+role="doc-biblioentry">
+Pharr, Matt. n.d. <span>“Physically <span>Based Rendering</span>:
+<span>From Theory</span> to <span>Implementation</span>.”</span>
+</div>
+<div id="ref-pharrPhysicallyBasedRendering2023" class="csl-entry"
+role="doc-biblioentry">
+Pharr, Matt, Wenzel Jakob, and Greg Humphreys. 2023. <em>Physically
+<span>Based Rendering</span>, Fourth Edition: <span>From Theory</span>
+to <span>Implementation</span></em>. MIT Press.
+</div>
+<div id="ref-polgarFreaxBriefHistory2016" class="csl-entry"
+role="doc-biblioentry">
+Polgár, Tamás. 2016. <em>Freax: <span>The Brief History</span> of the
+<span>Computer Demoscene</span></em>. CSW-Verlag.
+</div>
+<div id="ref-pritchettMusicJohnCage1996" class="csl-entry"
+role="doc-biblioentry">
+Pritchett, James. 1996. <em>The <span>Music</span> of <span>John
+Cage</span></em>. Cambridge University Press.
+</div>
+<div id="ref-psenoughSeminarTeachYourself2020" class="csl-entry"
+role="doc-biblioentry">
+psenough. 2020. <span>“Seminar: <span>Teach Yourself Demoscene</span> in
+14 <span>Days</span> (Speaker: Ps).”</span>
+</div>
+<div id="ref-pyconczRyanKirkbrideProgramming2018" class="csl-entry"
+role="doc-biblioentry">
+PyCon CZ. 2018. <span>“Ryan <span>Kirkbride</span>: <span>Programming
+Music</span> for <span>Performance</span>: <span>Live</span> Coding with
+<span>FoxDot</span>.”</span>
+</div>
+<div id="ref-reunanenComputerDemosWhat" class="csl-entry"
+role="doc-biblioentry">
+Reunanen, Markku. n.d.a. <span>“Computer <span>Demos</span>—<span>What
+Makes Them Tick</span>?”</span>
+</div>
+<div id="ref-reunanenDemoscene30Years" class="csl-entry"
+role="doc-biblioentry">
+———. n.d.b. <span>“Demoscene: 30 Years of Creative Programming.”</span>
+</div>
+<div id="ref-scheibDemoScene2002" class="csl-entry"
+role="doc-biblioentry">
+Scheib, Vincent, Theo Engell-Nielsen, Saku Lehtinen, Eric Haines, and
+Phil Taylor. 2002. <span>“The Demo Scene.”</span> In <em><span>ACM
+SIGGRAPH</span> 2002 Conference Abstracts and Applications</em>, 96–97.
+<span>SIGGRAPH</span> ’02. New York, NY, USA: Association for Computing
+Machinery. <a
+href="https://doi.org/10.1145/1242073.1242125">https://doi.org/10.1145/1242073.1242125</a>.
+</div>
+<div id="ref-scoatesBrianEnoVisual2013" class="csl-entry"
+role="doc-biblioentry">
+Scoates, Christopher. 2013. <em>Brian <span>Eno</span>: <span>Visual
+Music</span></em>. Chronicle Books.
+</div>
+<div id="ref-selvarajLiveCodingReview2021" class="csl-entry"
+role="doc-biblioentry">
+Selvaraj, Ana, Eda Zhang, Leo Porter, and Adalbert Gerald Soosai Raj.
+2021. <span>“Live <span>Coding</span>: <span>A Review</span> of the
+<span>Literature</span>.”</span> In <em>Proceedings of the 26th
+<span>ACM Conference</span> on <span>Innovation</span> and
+<span>Technology</span> in <span>Computer Science Education V</span>.
+1</em>, 164–70. <span>ITiCSE</span> ’21. New York, NY, USA: Association
+for Computing Machinery. <a
+href="https://doi.org/10.1145/3430665.3456382">https://doi.org/10.1145/3430665.3456382</a>.
+</div>
+<div id="ref-shiffmanNatureCode2012" class="csl-entry"
+role="doc-biblioentry">
+Shiffman, Daniel. 2012. <em>The Nature of Code</em>. Version 1.0,
+generated December 6, 2012. s.l.: Selbstverl.
+</div>
+<div id="ref-svidzinskiLIVEPATCHINGCOLLABORATIF2021" class="csl-entry"
+role="doc-biblioentry">
+Svidzinski, João, and Messina Marcello. 2021. <span>“<span>LIVE PATCHING
+COLLABORATIF</span> - <span>VERS UNE MEDIATION INCLUSIVE AVEC
+L</span>’<span>INFORMATIQUE MUSICALE</span>.”</span> In
+<em>Journ<span>é</span>es d’<span>Informatique Musicale</span>
+2021</em>. Visioconf<span>é</span>rences, France: AFIM.
+</div>
+<div id="ref-tanimotoPerspectiveEvolutionLive2013" class="csl-entry"
+role="doc-biblioentry">
+Tanimoto, Steven L. 2013. <span>“A Perspective on the Evolution of Live
+Programming.”</span> In <em>2013 1st <span>International Workshop</span>
+on <span>Live Programming</span> (<span>LIVE</span>)</em>, 31–34. San
+Francisco, CA, USA: IEEE. <a
+href="https://doi.org/10.1109/LIVE.2013.6617346">https://doi.org/10.1109/LIVE.2013.6617346</a>.
+</div>
+<div id="ref-tasajarviDemosceneArtRealtime2004" class="csl-entry"
+role="doc-biblioentry">
+Tasajärvi, Lassi, Mikael Schustin, Bent Stamnes, and Arttu Tolonen.
+2004. <em>Demoscene: The Art of Real-Time</em>. Helsinki: Even Lake
+Studios : Katastro. Fi.
+</div>
+</div>
+</section>
 </body>
 </html>
