--- a/memoire/main_test.html
+++ b/memoire/main_test.html
@@ -6628,5 +6628,361 @@ Studios : Katastro. Fi.
 </div>
 </div>
 </section>
+
+<section>
+  <div id="refs" class="references csl-bib-body hanging-indent"
+  role="doc-bibliography">
+  <div id="ref-00GettingStarted" class="csl-entry" role="doc-biblioentry">
+  <span>“00. <span>Getting Started With SC</span> <span></span>
+  <span>SuperCollider</span> 3.12.2 <span>Help</span>.”</span> n.d.
+  https://doc.sccode.org/Tutorials/Getting-Started/00-Getting-Started-With-SC.html.
+  </div>
+  <div id="ref-ListDemosceneEvents" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“A List of Demoscene Events – Demoparty.net.”</span> n.d.
+  https://www.demoparty.net/.
+  </div>
+  <div id="ref-Demoscene" class="csl-entry" role="doc-biblioentry">
+  <span>“About the <span>Demoscene</span>.”</span> n.d. <em>Demoscene -
+  The Art of Coding</em>.
+  https://demoscene-the-art-of-coding.net/the-demoscene/.
+  </div>
+  <div id="ref-alexthiMakingMusicShadertoy2022" class="csl-entry"
+  role="doc-biblioentry">
+  alexthi. 2022. <span>“Making <span>Music</span> in
+  <span>Shadertoy</span> - <span>Episode</span> 1 : <span>Basics</span>,
+  <span>Waveforms</span>, and a <span>Simple Tune</span>.”</span>
+  </div>
+  <div id="ref-AlgorithmicComposerGetting" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Algorithmic Composer: Getting Started with Algorithmic
+  Composition.”</span> n.d.
+  http://www.algorithmiccomposer.com/p/algorithmic-composition-getting-started.html.
+  </div>
+  <div id="ref-AlgorithmicCompositionComputational" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Algorithmic <span>Composition</span>: <span>Computational
+  Thinking</span> in <span>Music</span> <span></span> <span>July</span>
+  2011 <span></span> <span>Communications</span> of the
+  <span>ACM</span>.”</span> n.d.
+  https://cacm.acm.org/magazines/2011/7/109891-algorithmic-composition/abstract.
+  </div>
+  <div id="ref-asiaDemosceneUndergroundArt2019" class="csl-entry"
+  role="doc-biblioentry">
+  Asia, SIGGRAPH. 2019. <span>“Demoscene: <span>The Underground Art</span>
+  of <span class="nocase">Real-time</span>.”</span> <em>ACM SIGGRAPH
+  Blog</em>.
+  </div>
+  <div id="ref-CookieCollective" class="csl-entry" role="doc-biblioentry">
+  <span>“Cookie <span>Collective</span>.”</span> n.d. <em>Cookie
+  Collective</em>. https://cookie.paris/.
+  </div>
+  <div id="ref-crashserverTutorialHowCustomize2020" class="csl-entry"
+  role="doc-biblioentry">
+  crashserver. 2020a. <span>“Tutorial - <span>How</span> to Customize
+  <span>Foxdot</span> with Your Own <span>Synths</span>, Effects,
+  Functions and Samples.”</span> <em>CrashServer</em>.
+  </div>
+  <div id="ref-crashserverTutorialHowRecord2020" class="csl-entry"
+  role="doc-biblioentry">
+  ———. 2020b. <span>“Tutorial - <span>How</span> to Record
+  <span>FoxDot</span> Multi Outputs in a <span>DAW</span>.”</span>
+  <em>CrashServer</em>.
+  </div>
+  <div id="ref-crashserverFoxDotTutorialPrint2022" class="csl-entry"
+  role="doc-biblioentry">
+  ———. 2022a. <span>“<span>FoxDot Tutorial</span> - <span>Print</span> the
+  <span>Code</span> in a Retro <span>CRT</span> Terminal.”</span>
+  <em>CrashServer</em>.
+  </div>
+  <div id="ref-crashserverTutorialWriteYour2022" class="csl-entry"
+  role="doc-biblioentry">
+  ———. 2022b. <span>“Tutorial - <span>Write</span> Your Own
+  <span>FoxDot</span> Custom Function with <span>Python</span>.”</span>
+  <em>CrashServer</em>.
+  </div>
+  <div id="ref-crashserverUltimateFoxDotPython2022" class="csl-entry"
+  role="doc-biblioentry">
+  ———. 2022c. <span>“Ultimate <span>FoxDot</span> Python Custom
+  Functions.”</span> <em>CrashServer</em>.
+  </div>
+  <div id="ref-Curio" class="csl-entry" role="doc-biblioentry">
+  <span>“Curio.”</span> n.d. https://curio.scene.org/.
+  </div>
+  <div id="ref-DemosceneResearch" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Demoscene <span>Research</span>.”</span> n.d.
+  </div>
+  <div id="ref-DemoscenedocYouTube" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Demoscenedoc - <span>YouTube</span>.”</span> n.d.
+  https://www.youtube.com/channel/UC7KMIfYZT0L_ds8HS3Kf-jA.
+  </div>
+  <div id="ref-Demozoo" class="csl-entry" role="doc-biblioentry">
+  <span>“Demozoo.”</span> n.d. https://demozoo.org/.
+  </div>
+  <div id="ref-EvenementsCreative_codingFuz" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Evenements:creative_coding [<span>Fuz
+  Hackerspace</span>].”</span> n.d.
+  https://wiki.fuz.re/doku.php?id=evenements:creative_coding.
+  </div>
+  <div id="ref-AlanTuring20042007" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“For <span>Alan Turing</span> (2004).”</span> 2007. <em>Robin
+  Meier</em>.
+  </div>
+  <div id="ref-FreaxBriefHistory" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Freax: <span>The Brief History</span> of the <span>Computer
+  Demoscene</span> - <span class="nocase">Tam<span
+  class="nocase">á</span>s</span>, <span class="nocase">Polg<span
+  class="nocase">á</span>r</span> - <span>Google Livres</span>.”</span>
+  n.d.
+  https://books.google.fr/books?id=Ha2_EAAAQBAJ&amp;pg=PT29&amp;hl=fr&amp;source=gbs_toc_r&amp;cad=2#v=onepage&amp;q&amp;f=false.
+  </div>
+  <div id="ref-GitHubPoetasterSupercolliderlsystems" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“<span>GitHub</span> - Poetaster/Supercollider-Lsystems:
+  <span>This</span> Is a Set of Supercollider Compositions to Musicially
+  Illustrate Some l-Systems <span>I</span> Wrote.”</span> n.d.
+  https://github.com/poetaster/supercollider-lsystems.
+  </div>
+  <div id="ref-GPUAcceleratedMandelbrot" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“<span>GPU Accelerated Mandelbrot Set</span> in
+  <span>Shadertoy</span>.”</span> n.d.
+  https://arnestenkrona.github.io/blog/2021/03/04/Mandelbrot-in-Shadertoy.
+  </div>
+  <div id="ref-HomeP5Js" class="csl-entry" role="doc-biblioentry">
+  <span>“Home <span></span> P5.js.”</span> n.d. https://p5js.org/.
+  </div>
+  <div id="ref-SyntheseSonore2002" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“<span>La synth<span>è</span>se sonore</span>.”</span> 2002.
+  <em>Audiofanzine</em>.
+  https://fr.audiofanzine.com/synthetiseur-rack/editorial/dossiers/la-synthese-sonore.html.
+  </div>
+  <div id="ref-SyntheseSonoreAudiofanzine" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“La Synth<span>è</span>se Sonore -
+  <span>Audiofanzine</span>.”</span> n.d.
+  https://fr.audiofanzine.com/synthetiseur-rack/editorial/dossiers/la-synthese-sonore.html.
+  </div>
+  <div id="ref-LearnOpenGLExtensive" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Learn <span>OpenGL</span>, Extensive Tutorial Resource for
+  Learning <span>Modern OpenGL</span>.”</span> n.d.
+  https://learnopengl.com/.
+  </div>
+  <div id="ref-LivecodingTutorialsTips" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Livecoding <span>Tutorials</span> and Tips -
+  <span>YouTube</span>.”</span> n.d.
+  https://www.youtube.com/playlist?list=PLIKH_fHtdeLlF9gUUUNSVY9n0iZnZ2yUL.
+  </div>
+  <div id="ref-Livecoding_website" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Livecoding_website.”</span> n.d. https://livecoding.fr/.
+  </div>
+  <div id="ref-MaxTfirnUniversity" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Max <span>Tfirn</span> <span></span> <span>University</span> of
+  <span>Virginia</span> - <span>Academia</span>.edu.”</span> n.d.
+  https://virginia.academia.edu/MaxTfirn.
+  </div>
+  <div id="ref-MusicAlgoPetiteIntroduction" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“<span>MusicAlgo – Petite introduction pratique aux musiques
+  g<span>é</span>n<span>é</span>ratives et algorithmiques</span>.”</span>
+  n.d.
+  </div>
+  <div id="ref-MyApproachAutomatic" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“My <span>Approach</span> to <span>Automatic Musical
+  Composition</span>.”</span> n.d.
+  https://flujoo.github.io/en/my-approach-to-automatic-musical-composition/.
+  </div>
+  <div id="ref-NeHeProductionsEverything" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“<span>NeHe Productions</span> - <span>Everything
+  OpenGL</span>.”</span> n.d. http://nehe.gamedev.net/.
+  </div>
+  <div id="ref-PaintingMathGentle2023" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Painting with <span>Math</span>: <span>A Gentle Study</span> of
+  <span>Raymarching</span> - <span>Maxime Heckel</span>’s
+  <span>Blog</span>.”</span> 2023.
+  https://blog.maximeheckel.com/posts/painting-with-math-a-gentle-study-of-raymarching/.
+  </div>
+  <div id="ref-PhysicallyBasedRendering" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Physically <span>Based Rendering</span>: <span>From Theory</span>
+  to <span>Implementation</span>.”</span> n.d. https://www.pbr-book.org/.
+  </div>
+  <div id="ref-PoetasterMarkWasheim" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Poetaster (<span>Mark Washeim</span>) <span><span
+  class="math inline">⋅</span></span> <span>GitHub</span>.”</span> n.d.
+  https://github.com/poetaster.
+  </div>
+  <div id="ref-QUESTCEQUE" class="csl-entry" role="doc-biblioentry">
+  <span>“<span>QU’EST-CE QUE LA MUSIQUE ALGORITHMIQUE ? –
+  MusicAlgo</span>.”</span> n.d.
+  </div>
+  <div id="ref-quilezInigoQuilez" class="csl-entry"
+  role="doc-biblioentry">
+  Quilez, Inigo. n.d. <span>“Inigo <span>Quilez</span>.”</span>
+  https://iquilezles.org.
+  </div>
+  <div id="ref-RayMarching" class="csl-entry" role="doc-biblioentry">
+  <span>“Ray <span>Marching</span>.”</span> n.d. <em>Michael Walczyk</em>.
+  https://michaelwalczyk.com/blog-ray-marching.html.
+  </div>
+  <div id="ref-RayMarchingSignedd" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Ray <span>Marching</span> and <span>Signed Distance
+  Functions</span>.”</span> n.d. <em>Zero Wind :: Jamie Wong</em>.
+  http://jamie-wong.com/2016/07/15/ray-marching-signed-distance-functions/.
+  </div>
+  <div id="ref-RayTracingOne" class="csl-entry" role="doc-biblioentry">
+  <span>“Ray <span>Tracing</span> in <span>One Weekend
+  Series</span>.”</span> n.d. https://raytracing.github.io/.
+  </div>
+  <div id="ref-RealtimeDreamyCloudscapes2023" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Real-Time Dreamy <span>Cloudscapes</span> with <span>Volumetric
+  Raymarching</span> - <span>Maxime Heckel</span>’s
+  <span>Blog</span>.”</span> 2023.
+  https://blog.maximeheckel.com/posts/real-time-cloudscapes-with-volumetric-raymarching/.
+  </div>
+  <div id="ref-RefractionDispersionOther2023" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Refraction, Dispersion, and Other Shader Light Effects -
+  <span>Maxime Heckel</span>’s <span>Blog</span>.”</span> 2023.
+  https://blog.maximeheckel.com/posts/refraction-dispersion-and-other-shader-light-effects/.
+  </div>
+  <div id="ref-RenderingMandelbrotSet" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Rendering the <span>Mandelbrot Set</span> with Shaders —
+  <span>Using OpenGL</span> and <span>GLSL</span> &gt;&gt;
+  <span>Arukiap</span>.”</span> n.d.
+  https://arukiap.github.io/fractals/2019/06/02/rendering-the-mandelbrot-set-with-shaders.html.
+  </div>
+  <div id="ref-Revision2023April" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Revision 2023 - <span>April</span> 7th to 10th.”</span> n.d.
+  https://2023.revision-party.net/.
+  </div>
+  <div id="ref-ScratchapixelLearnComputer" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Scratchapixel 4.0, <span>Learn Computer Graphics
+  Programming</span>.”</span> n.d.
+  https://www.scratchapixel.com/index.html.
+  </div>
+  <div id="ref-SebastianLagueYouTube" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Sebastian <span>Lague</span> - <span>YouTube</span>.”</span> n.d.
+  https://www.youtube.com/@SebastianLague.
+  </div>
+  <div id="ref-ShadertoyTutorialPart" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Shadertoy <span>Tutorial Part</span> 1 -
+  <span>Intro</span>.”</span> n.d.
+  https://inspirnathan.com/posts/47-shadertoy-tutorial-part-1.
+  </div>
+  <div id="ref-SimonDevYouTube" class="csl-entry" role="doc-biblioentry">
+  <span>“<span>SimonDev</span> - <span>YouTube</span>.”</span> n.d.
+  https://www.youtube.com/@simondev758.
+  </div>
+  <div id="ref-SizeCoding" class="csl-entry" role="doc-biblioentry">
+  <span>“<span>SizeCoding</span>.”</span> n.d.
+  http://www.sizecoding.org/wiki/Main_Page.
+  </div>
+  <div id="ref-StackGl" class="csl-entry" role="doc-biblioentry">
+  <span>“Stack.gl.”</span> n.d. https://stack.gl/.
+  </div>
+  <div id="ref-ArtCodeYouTube" class="csl-entry" role="doc-biblioentry">
+  <span>“The <span>Art</span> of <span>Code</span> -
+  <span>YouTube</span>.”</span> n.d.
+  https://www.youtube.com/@TheArtofCodeIsCool/videos.
+  </div>
+  <div id="ref-BookShaders" class="csl-entry" role="doc-biblioentry">
+  <span>“The <span>Book</span> of <span>Shaders</span>.”</span> n.d.
+  <em>The Book of Shaders</em>. https://thebookofshaders.com/.
+  </div>
+  <div id="ref-OxfordHandbookAlgorithmic" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“The <span>Oxford Handbook</span> of <span>Algorithmic
+  Music</span> - <span>R</span>. <span>T</span>. <span>Dean</span> -
+  <span>Google Livres</span>.”</span> n.d.
+  https://books.google.fr/books?hl=fr&amp;lr=&amp;id=mA5EDwAAQBAJ&amp;oi=fnd&amp;pg=PP1&amp;dq=algorithmic+music&amp;ots=FTS7ayXyxj&amp;sig=it5d4AewFAJ1YT9zuLxb54-6RR8#v=onepage&amp;q=algorithmic%20music&amp;f=false.
+  </div>
+  <div id="ref-ThreeJsJavaScript" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Three.js – <span>JavaScript 3D Library</span>.”</span> n.d.
+  https://threejs.org/.
+  </div>
+  <div id="ref-TodePondYouTube" class="csl-entry" role="doc-biblioentry">
+  <span>“<span>TodePond</span> - <span>YouTube</span>.”</span> n.d.
+  https://www.youtube.com/@TodePond/videos.
+  </div>
+  <div id="ref-TutorialHowCustomize" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Tutorial - <span>How</span> to Customize <span>Foxdot</span> with
+  Your Own <span>Synths</span>, Effects, Functions and Samples. -
+  <span>CrashServer</span>.”</span> n.d.
+  https://crashserver.fr/how-to-customize-foxdot-with-your-own-synths-effects-functions-and-samples/.
+  </div>
+  <div id="ref-vachharNoiseCreativeCoding2021" class="csl-entry"
+  role="doc-biblioentry">
+  Vachhar, Varun. 2021. <span>“Noise in <span>Creative
+  Coding</span>.”</span> <em>Varun Vachhar</em>. https://varun.ca/noise/.
+  </div>
+  <div id="ref-vachharIridescentCrystalRaymarching2023" class="csl-entry"
+  role="doc-biblioentry">
+  ———. 2023. <span>“Iridescent Crystal with Raymarching and Signed
+  Distance Fields.”</span> <em>Varun Vachhar</em>.
+  https://varun.ca/ray-march-sdf/.
+  </div>
+  <div id="ref-vaughnShaderResources2021" class="csl-entry"
+  role="doc-biblioentry">
+  Vaughn, Nathan. 2021. <span>“Shader <span>Resources</span>.”</span>
+  <em>Inspirnathan</em>.
+  https://inspirnathan.com/posts/64-shader-resources.
+  </div>
+  <div id="ref-VisualModelsMorphogenesis" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Visual <span>Models</span> of <span>Morphogenesis</span>:
+  <span>Title</span> Page.”</span> n.d.
+  http://algorithmicbotany.org/vmm-deluxe/TitlePage.html.
+  </div>
+  <div id="ref-VisualMusicProQuest" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“<span>Visual Music - ProQuest</span>.”</span> n.d.
+  https://www.proquest.com/openview/2a49f35f8bd47be0e91433c1c5944092/1?pq-origsite=gscholar&amp;cbl=1817017.
+  </div>
+  <div id="ref-vivoPatriciogonzalezvivoLygia2024" class="csl-entry"
+  role="doc-biblioentry">
+  Vivo, Patricio Gonzalez. 2024.
+  <span>“Patriciogonzalezvivo/Lygia.”</span>
+  </div>
+  <div id="ref-WaybackMachine2004" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“Wayback <span>Machine</span>.”</span> 2004.
+  https://web.archive.org/web/20040616151606/http://www.acid.org/images/sfdemo04/IA4_1demosceneshoreval.pdf.
+  </div>
+  <div id="ref-WaybackMachine2016" class="csl-entry"
+  role="doc-biblioentry">
+  ———. 2016.
+  https://web.archive.org/web/20160602200142/http://www.isea2010ruhr.org/files/redaktion/pdf/isea2010_proceedings_p11_hartmann.pdf.
+  </div>
+  <div id="ref-WebGLFundamentals" class="csl-entry"
+  role="doc-biblioentry">
+  <span>“<span>WebGL Fundamentals</span>.”</span> n.d.
+  https://webglfundamentals.org.
+  </div>
+  </div>
+</section>
 </body>
 </html>
