--- a/memoire/main_test.html
+++ b/memoire/main_test.html
@@ -6223,8 +6223,9 @@ viabilité d’une idée, d’un concept ou d’une méthode.<a href="#fnref77"
 class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section>
-<section>
 
+<section>
+  <h1>Bibligraphie</h1>
   <div id="refs" class="references csl-bib-body hanging-indent"
 role="doc-bibliography">
 <div id="ref-AlgorithmicComposition2023" class="csl-entry"
@@ -6630,6 +6631,7 @@ Studios : Katastro. Fi.
 </section>
 
 <section>
+  <h1>Webographie</h1>
   <div id="refs" class="references csl-bib-body hanging-indent"
   role="doc-bibliography">
   <div id="ref-00GettingStarted" class="csl-entry" role="doc-biblioentry">
