--- a/memoire/main_test.html
+++ b/memoire/main_test.html
@@ -270,7 +270,7 @@ Virtuelle</em></span></p>
 </p>
 <p><img src="images/logos/ATI_LogoNoir02.png" style="width:60.0%"
 alt="image" /> <br />
-<span><strong>Mémoire de Master 2, 2023 - 2024</strong></span></p>
+<span><strong>Mémoire de Master 2</strong></span></p>
 </div>
 </div>
 <div class="titlepage">
