--- a/memoire/main_test.html
+++ b/memoire/main_test.html
@@ -6233,7 +6233,7 @@ class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </section>
 
 <section>
-  <h1>Bibligraphie</h1>
+  <h1>Bibliographie</h1>
   <div id="refs" class="references csl-bib-body hanging-indent"
 role="doc-bibliography">
 <div id="ref-AlgorithmicComposition2023" class="csl-entry"
