--- a/memoire/index.html
+++ b/memoire/index.html
@@ -6,6 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>main_test</title>
   <style>
+        .centered {
+                text-align: center;
+            }
+        .title {
+            font-size: 2.5em; /* Taille de la police pour le titre */
+        }
+
+        .author {
+            font-size: 2em; /* Taille de la police pour le titre */
+        }
+
 
         .toc {
             position: fixed;
@@ -328,31 +339,42 @@
       <div id="toc-content"></div>
   </nav>
 
-
-<div class="titlepage">
-<div class="center">
-<p><span><strong>Université Paris 8</strong></span><br />
-<span><strong>Master Création Numérique</strong></span><br />
-<span>parcours: <em>Arts et Technologies de l’Image
-Virtuelle</em></span></p>
-<hr />
-<p><br />
-<span> <strong>Vers une interaction authentique entre
-<em>livecoders</em></strong></span><br />
-<span><em>Forward The Revolution</em></span></p>
-<hr />
-<p><br />
-</p>
-<hr />
-<!--
-<p><br />
-<span><strong>Guillaume Cournet</strong></span><br />
-</p>
+<!--  
+  <div class="titlepage">
+    <div class="center">
+      <p><span><strong>Université Paris 8</strong></span><br />
+        <span><strong>Master Création Numérique</strong></span><br />
+        <span>parcours: <em>Arts et Technologies de l’Image
+          Virtuelle</em></span></p>
+          <hr />
 -->
+
+
+<div class="centered">
+    <p class="title">
+        <strong>Vers une interaction authentique entre
+        <em>livecoders</em></strong><br>
+        <em>Forward The Revolution</em>
+    </p>
+</div>
+
 <hr />
 <p><br />
 </p>
-<p><img src="images/logos/ATI_LogoNoir02.png" style="width:60.0%"
+<hr />
+
+<div class="centered">
+  <p class="author">
+    Guillaume Cournet
+  </p>
+</div>
+
+
+
+<hr />
+<p><br />
+</p>
+<p><img src="images/logos/ATI_LogoNoir02.png" style="width:90.0%"
 alt="image" /> <br />
 <span><strong>Mémoire de Master 2</strong></span></p>
 </div>
