--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+        <script src="menu.html"></script>
+
     </header>
     
     </main>
