--- a/menu.html
+++ b/menu.html
@@ -1,8 +1,8 @@
 <nav>
     <ul>
-        <li><a href="#home">Accueil</a></li>
-        <li><a href="#about">À propos</a></li>
-        <li><a href="./memoire/">Mémoire</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#home">m1</a></li>
+        <li><a href="#about">m2</a></li>
+        <li><a href="./memoire/">m3</a></li>
+        <li><a href="#contact">m4</a></li>
     </ul>
 </nav>
