test click sur btn memoire

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header id = "content">
         
     </header>
-
-    <button id="loadContentButton">Load Content</button>
+    <!-- ne fonctionne plus-->
+    <button >Load Content</button>
 
     <div id="main_content"></div>
 
