--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="#home">m1</a></li>
         <li><a href="#about">m2</a></li>
-        <li id="loadContentButton"><a href="./memoire/">m3</a></li>
+        <li id="loadContentButton"><a href="#memoire">m3</a></li>
         <li><a href="#contact">m4</a></li>
     </ul>
 </nav>
