--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <title>hrst4.xyz</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_index.css">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
         
     </header>
     <!-- ne fonctionne plus-->
-    <button >Load Content</button>
+    <button>Load Content</button>
 
     <div id="main_content"></div>
 
