--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div id="main_content"></div>
 
-<script src="script.js"></script>
+<script src="load_html.js"></script>
 <script src="add_menu.js"></script>
 
 
