--- a/menu.html
+++ b/menu.html
@@ -1,8 +1,9 @@
 <nav>
     <ul>
-        <li><a href="#home">m1</a></li>
-        <li><a href="#about">m2</a></li>
+        <li><a href="./home/index.html">m1</a></li>
+        <li><a href="./about/index.html">m2</a></li>
         <li id="loadContentButton"><a href="#memoire">m3</a></li>
-        <li><a href="#contact">m4</a></li>
+        <li><a href="#klkl">m4</a></li>
+        <li><a href="./contact/index.html">m5</a></li>
     </ul>
 </nav>
