--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>hrst4.xyz</title>
     <link rel="stylesheet" href="styles_index.css">
 </head>
+
 <body>
 
-
+    <script >
+        alert("The print dialog will open. Please proceed to print the section.");
+    </script>
+    
     <header id = "content">
         
     </header>
