--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <title>hrst4.xyz</title>
-    <link rel="stylesheet" href="styles_index.css">
+    <link rel="stylesheet" href="./styles_index.css">
 </head>
 
 <body>
 
-    <header id = "menu">
+    <header id ="menu">
         
     </header>
     <!-- ne fonctionne plus-->
