--- a/index.html
+++ b/index.html
@@ -8,23 +8,22 @@
 </head>
 
 <body>
-
+    <p>
+        test body 1
+    </p>
     <header id ="menu">
-        
+        test header 1
     </header>
-    <!-- ne fonctionne plus-->
-    <!--
-        <button>Load Content</button>
-    -->
 
     <div id="main_content"></div>
 
-<script src="add_menu.js"></script>
-<script src="load_html.js"></script>
+    <script src="./scripts/test.js"></script>
+    <script src="./scripts/addMenu.js"></script>
+    <script src="./scripts/loadHtml.js"></script>
 
-
-
-    
+    <p>
+        test body 2
+    </p>
 
 </body>
 </html>
