debug menu color

--- a/memoire.html
+++ b/memoire.html
@@ -28,7 +28,7 @@
           <hr />
 -->
 
-
+<div class="memoire">
 <div class="centered">
     <p class="title">
         <strong>Vers une interaction authentique entre
@@ -6840,6 +6840,7 @@ Studios : Katastro. Fi.
       // Assurez-vous que la case est décochée au chargement de la page
       document.getElementById('toc-toggle').checked = false;
   });
-</script>
+    </script>
+    </div>
 </body>
 </html>
