--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <script src="./scripts/addMenu.js"></script>
     <script src="./scripts/loadHtml.js"></script>
+    <script src="./scripts/toc.js"></script>
 
 </body>
 </html>
