--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 </head>
 
 <body>
+    <nav class="toc">
+      
+        <div id="toc-content"></div>
+    </nav>
     
     <header id ="menu" class="menu">
 
