--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 <body>
     
-    
     <header id ="menu" class="menu">
 
     </header>
@@ -27,7 +26,7 @@
     <div id="main_content"></div>
 
     <script src="./scripts/addMenu.js"></script>
-    <script src="./scripts/loadHtml.js"></script>
+    <script src="./scripts/loadMemoire.js"></script>
 
 </body>
 </html>
