debug toc rename

--- a/memoire.html
+++ b/memoire.html
@@ -6815,5 +6815,5 @@ Studios : Katastro. Fi.
   </div>
 </section>
 
-<script src="./scripts/loadMemoire.js"></script>
+<script src="./scripts/toc.js"></script>
 
