icon social medias

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,3 +1,73 @@
-<p>
-    i am contact
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-Z53UBrQnHJfUdZP+7k9Rq9Jyjrm7NUm7dbNzNfCfcFQuN47V5DTLvWvepK6rKAWDwG2xZLxY3QihJDXiwSo7TQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+        }
+        ul.social {
+            list-style-type: none;
+            padding: 0;
+            text-align: center;
+        }
+        ul.social li {
+            display: inline-block;
+            margin: 0 10px;
+        }
+        ul.social li a {
+            display: block;
+            width: 40px;
+            height: 40px;
+            background-color: #333;
+            color: #fff;
+            font-size: 24px;
+            line-height: 40px;
+            text-align: center;
+            border-radius: 50%;
+            transition: background-color 0.3s;
+        }
+        ul.social li a:hover {
+            background-color: #666;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Contact Us</h1>
+        <p>Feel free to contact us using any of the following methods:</p>
+        <ul class="social">
+            <li><a href="https://www.facebook.com/YourPage" target="_blank"><i class="fab fa-facebook-f"></a></li>
+            <li><a href="https://twitter.com/YourTwitter" target="_blank"><i class="fab fa-twitter"></a></li>
+            <li><a href="https://www.instagram.com/YourInstagram" target="_blank"><i class="fab fa-instagram"></a></li>
+            <!-- Add more social media links as needed -->
+        </ul>
+        <p>You can also reach us via email at <a href="mailto:contact@example.com">contact@example.com</a>.</p>
+        <p>Or fill out the form below:</p>
+        <form action="#" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required><br>
+            <label for="message">Message:</label><br>
+            <textarea id="message" name="message" rows="4" required></textarea><br>
+            <button type="submit">Send</button>
+        </form>
+    </div>
+</body>
+</html>
