--- a/contact/index.html
+++ b/contact/index.html
@@ -12,12 +12,13 @@
 	<link rel="stylesheet" href="css/style.css">
 
 	</head>
+
 	<body>
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5">
-					<h2 class="heading-section">Contact Form #03</h2>
+					<h2 class="heading-section">Contact</h2>
 				</div>
 			</div>
 			<div class="row justify-content-center">
@@ -32,7 +33,7 @@
 			        		<div class="text">
 				            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
 				          </div>
-			          </div>
+						</div>
 							</div>
 							<div class="col-md-3">
 								<div class="dbox w-100 text-center">
@@ -65,6 +66,7 @@
 			          </div>
 							</div>
 						</div>
+						
 						<div class="row no-gutters">
 							<div class="col-md-7">
 								<div class="contact-wrap w-100 p-md-5 p-4">
@@ -128,4 +130,3 @@
 
 	</body>
 </html>
-
