--- a/memoire/index.html
+++ b/memoire/index.html
@@ -63,7 +63,7 @@ display: none;
 position: fixed;
 top: 20px;
 left: 20px;
-background: #f9f9f9;
+background: #E6DB74;
 padding: 10px;
 border: 1px solid #ccc;
 border-radius: 5px;
