--- a/memoire/index.html
+++ b/memoire/index.html
@@ -35,6 +35,11 @@ display: none; /* Masqué par défaut */
 padding-top: 50px;
 
 }
+
+#toc-content{
+  background-color: #F8F8F2;
+}
+
 .toc a {
 text-decoration: none;
 color: #333;
@@ -98,7 +103,7 @@ width: 32%;
 
 html {
 color: #1a1a1a;
-background-color: #fdfdfd;
+background-color: #272822;
 }
 body {
 margin: 0 auto;
@@ -111,6 +116,7 @@ hyphens: auto;
 overflow-wrap: break-word;
 text-rendering: optimizeLegibility;
 font-kerning: normal;
+background-color: #F8F8F2;
 }
 @media (max-width: 600px) {
 body {
