--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <meta name="description" content="The personal website of Guillaume Cournet featuring creative coding and livecoding.">
 
-    <title>hrst4.xyz</title>
+    <title>Guillaume Cournet | hrst4.xyz</title>
     
     <link rel="stylesheet" href="./css/styles_index.css">
 
