--- a/contact/index.html
+++ b/contact/index.html
@@ -15,113 +15,94 @@
 
 	<body>
 		
-	<section class="ftco-section">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-md-6 text-center mb-5">
-					<h2 class="heading-section">Contact</h2>
+		<section class="ftco-section">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-md-6 text-center mb-5">
+						<h2 class="heading-section">Contact</h2>
+					</div>
 				</div>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-md-12">
-					<div class="wrapper">
-						<div class="row mb-5">
-							<div class="col-md-3">
-								<div class="dbox w-100 text-center">
-			        		<div class="icon d-flex align-items-center justify-content-center">
-			        			<span class="fa fa-map-marker"></span>
-			        		</div>
-			        		<div class="text">
-				            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
-				          </div>
-						</div>
-							</div>
-							<div class="col-md-3">
-								<div class="dbox w-100 text-center">
-			        		<div class="icon d-flex align-items-center justify-content-center">
-			        			<span class="fa fa-phone"></span>
-			        		</div>
-			        		<div class="text">
-				            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
-				          </div>
-			          </div>
-							</div>
-							<div class="col-md-3">
-								<div class="dbox w-100 text-center">
-			        		<div class="icon d-flex align-items-center justify-content-center">
-			        			<span class="fa fa-paper-plane"></span>
-			        		</div>
-			        		<div class="text">
-				            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-				          </div>
-			          </div>
-							</div>
-							<div class="col-md-3">
-								<div class="dbox w-100 text-center">
-			        		<div class="icon d-flex align-items-center justify-content-center">
-			        			<span class="fa fa-globe"></span>
-			        		</div>
-			        		<div class="text">
-				            <p><span>Website</span> <a href="#">yoursite.com</a></p>
-				          </div>
-			          </div>
-							</div>
-						</div>
-						
-						<div class="row no-gutters">
-							<div class="col-md-7">
-								<div class="contact-wrap w-100 p-md-5 p-4">
-									<h3 class="mb-4">Contact Us</h3>
-									<div id="form-message-warning" class="mb-4"></div> 
-				      		<div id="form-message-success" class="mb-4">
-				            Your message was sent, thank you!
-				      		</div>
-									<form method="POST" id="contactForm" name="contactForm" class="contactForm">
-										<div class="row">
-											<div class="col-md-6">
-												<div class="form-group">
-													<label class="label" for="name">Full Name</label>
-													<input type="text" class="form-control" name="name" id="name" placeholder="Name">
-												</div>
-											</div>
-											<div class="col-md-6"> 
-												<div class="form-group">
-													<label class="label" for="email">Email Address</label>
-													<input type="email" class="form-control" name="email" id="email" placeholder="Email">
-												</div>
-											</div>
-											<div class="col-md-12">
-												<div class="form-group">
-													<label class="label" for="subject">Subject</label>
-													<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
-												</div>
-											</div>
-											<div class="col-md-12">
-												<div class="form-group">
-													<label class="label" for="#">Message</label>
-													<textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Message"></textarea>
-												</div>
-											</div>
-											<div class="col-md-12">
-												<div class="form-group">
-													<input type="submit" value="Send Message" class="btn btn-primary">
-													<div class="submitting"></div>
-												</div>
-											</div>
+				<div class="row justify-content-center">
+					<div class="col-md-12">
+						<div class="wrapper">
+							<div class="row mb-5">
+								<div class="col-md-4">
+									<div class="dbox w-100 text-center">
+										<div class="icon d-flex align-items-center justify-content-center">
+											<span class="fa fa-map-marker"></span>
 										</div>
-									</form>
+										<div class="text">
+											<p><span>Address:</span></p>
+											<p>75018 Paris</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="dbox w-100 text-center">
+										<div class="icon d-flex align-items-center justify-content-center">
+											<span class="fa fa-paper-plane"></span>
+										</div>
+										<div class="text">
+											<p><span>Email:</span></p>
+											<p><a href="mailto:cournet.guillaume@protonmail.com">cournet.guillaume@protonmail.com</a></p>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="dbox w-100 text-center">
+										<div class="icon d-flex align-items-center justify-content-center">
+											<span class="fa fa-linkedin"></span>
+										</div>
+										<div class="text">
+											<p><span>Linkedin:</span></p>
+											<p><a href="https://linkedin.com/in/guillaume-cournet">linkedin.com/in/guillaume-cournet</a></p>
+										</div>
+									</div>
 								</div>
 							</div>
-							<div class="col-md-5 d-flex align-items-stretch">
-								<div class="info-wrap w-100 p-5 img" style="background-image: url(images/img.jpg);">
-			          </div>
+							<div class="row mb-5">
+								<div class="col-md-4">
+									<div class="dbox w-100 text-center">
+										<div class="icon d-flex align-items-center justify-content-center">
+											<span class="fa fa-music"></span>
+										</div>
+										<div class="text">
+											<p><span>Bandonéon Amigo:</span></p>
+											<p><a href="https://bandoneon-amigo.fr">bandoneon-amigo.fr</a></p>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="dbox w-100 text-center">
+										<div class="icon d-flex align-items-center justify-content-center">
+											<span class="fa fa-github"></span>
+										</div>
+										<div class="text">
+											<p><span>Github:</span></p>
+											<p><a href="https://github.com/gu1shermo">github.com/gu1shermo</a></p>
+										</div>
+									</div>
+								</div>
+								<!-- Vous pouvez ajouter un autre bloc ici pour compléter la troisième colonne -->
+								<div class="col-md-4">
+									<!-- Ajoutez un contenu approprié pour cette colonne -->
+									<div class="dbox w-100 text-center">
+										<div class="icon d-flex align-items-center justify-content-center">
+											<span class="fa fa-vimeo"></span>
+										</div>
+										<div class="text">
+											<p><span>Vimeo:</span></p>
+											<p><a href="https://vimeo.com/user167850166">vimeo.com/user167850166</a></p>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+		
 
 	<script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
