--- a/contact/index.html
+++ b/contact/index.html
@@ -55,7 +55,7 @@
 										</div>
 										<div class="text">
 											<p><span>Linkedin:</span></p>
-											<p><a href="https://linkedin.com/in/guillaume-cournet">linkedin.com/in/guillaume-cournet</a></p>
+											<p><a href="https://linkedin.com/in/guillaume-cournet" target="_blank">linkedin.com/in/guillaume-cournet</a></p>
 										</div>
 									</div>
 								</div>
@@ -68,7 +68,7 @@
 										</div>
 										<div class="text">
 											<p><span>Bandonéon Amigo:</span></p>
-											<p><a href="https://bandoneon-amigo.fr">bandoneon-amigo.fr</a></p>
+											<p><a href="https://bandoneon-amigo.fr" target="_blank">bandoneon-amigo.fr</a></p>
 										</div>
 									</div>
 								</div>
@@ -79,7 +79,7 @@
 										</div>
 										<div class="text">
 											<p><span>Github:</span></p>
-											<p><a href="https://github.com/gu1shermo">github.com/gu1shermo</a></p>
+											<p><a href="https://github.com/gu1shermo" target="_blank">github.com/gu1shermo</a></p>
 										</div>
 									</div>
 								</div>
@@ -92,7 +92,7 @@
 										</div>
 										<div class="text">
 											<p><span>Vimeo:</span></p>
-											<p><a href="https://vimeo.com/user167850166">vimeo.com/user167850166</a></p>
+											<p><a href="https://vimeo.com/user167850166" target="_blank">vimeo.com/user167850166</a></p>
 										</div>
 									</div>
 								</div>
