improve referenceme nt

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
 <head>
     <meta charset="UTF-8">
@@ -6,10 +7,18 @@
     <meta name="description" content="The personal website of Guillaume Cournet featuring creative coding and livecoding.">
     <meta name="keywords" content="Guillaume Cournet, creative coding, livecoding, web development">
 
+    <!-- Open Graph meta tags -->
     <meta property="og:title" content="Guillaume Cournet | hrst4.xyz">
     <meta property="og:description" content="The personal website of Guillaume Cournet featuring creative coding and livecoding.">
     <meta property="og:image" content="./images/icon_topor.jpg">
     <meta property="og:url" content="https://www.hrst4.xyz">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Guillaume Cournet">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Guillaume Cournet | hrst4.xyz">
+    <meta name="twitter:description" content="The personal website of Guillaume Cournet featuring creative coding and livecoding.">
+    <meta name="twitter:image" content="./images/icon_topor.jpg">
 
 
     <title>Guillaume Cournet | hrst4.xyz</title>
