--- a/contact/index.html
+++ b/contact/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Guillaume Cournet Contact| hrst4.xyz</title>
+	<title>Contact Guillaume Cournet | Creative Coding and Livecoding | hrst4.xyz</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Contact Guillaume Cournet for inquiries related to creative coding, livecoding. Reach out via email, LinkedIn, GitHub, and more.">
+    <meta name="keywords" content="Guillaume Cournet, contact, creative coding, livecoding">
+    
+	<meta property="og:title" content="Contact Guillaume Cournet | hrst4.xyz">
+    <meta property="og:description" content="Get in touch with Guillaume Cournet for creative coding, livecoding inquiries.">
+    <meta property="og:image" content="./images/icon_topor.jpg">
+    <meta property="og:url" content="https://www.hrst4.xyz/contact">
+
+	<meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Contact Guillaume Cournet | hrst4.xyz">
+    <meta name="twitter:description" content="Contact Guillaume Cournet for creative coding and livecoding inquiries.">
+    <meta name="twitter:image" content="./images/icon_topor.jpg">
 
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
-
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	
 	<link rel="stylesheet" href="css/style.css">
 
 	</head>
