--- a/contact/index.html
+++ b/contact/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
 	<title>Contact Guillaume Cournet | Creative Coding and Livecoding | hrst4.xyz</title>
@@ -9,13 +9,13 @@
     
 	<meta property="og:title" content="Contact Guillaume Cournet | hrst4.xyz">
     <meta property="og:description" content="Get in touch with Guillaume Cournet for creative coding, livecoding inquiries.">
-    <meta property="og:image" content="./images/icon_topor.jpg">
+    <meta property="og:image" content="https://www.hrst4.xyz/images/icon_topor.jpg">
     <meta property="og:url" content="https://www.hrst4.xyz/contact">
 
 	<meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Contact Guillaume Cournet | hrst4.xyz">
     <meta name="twitter:description" content="Contact Guillaume Cournet for creative coding and livecoding inquiries.">
-    <meta name="twitter:image" content="./images/icon_topor.jpg">
+    <meta name="twitter:image" content="https://www.hrst4.xyz/images/icon_topor.jpg">
 
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
